Feature/ikm 821 cq checks